# tree-sitter-obl

./: Cargo.toml  ReadMe.md  ReadMe.norg  binding.gyp  grammar.js  package.json
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
examples/: block_types.obl  compile_with_oblivion_expressions.obl  functions.obl  let_statement.obl  set_statement.obl  top_level.obl  variables.obl
queries/: highlights.scm  indents.scm  locals.scm
src/: functions.txt  grammar.json  node-types.json  parser.c  scanner.cc
test/corpus/: comments.txt  compile_with_oblivion_expressions.txt  conditional.txt  event_handler.txt  foreach.txt  format_specifiers.txt  functions.txt  goto_label.txt  let_statement.txt  literals.txt  return.txt  set_statement.txt  top_level.txt  user_defined_functions.txt  variables.txt  while.txt  whitespace.txt
